Added package LombokPractice && pom.xml and practice lombok library